syntax = "proto3";

package task.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/yourusername/taskmaster/api/proto/task/v1;taskv1";

// Task service definition
service TaskService {
  // Create a new task
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);

  // Get a task by ID
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);

  // List tasks with filtering
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);

  // Update an existing task
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);

  // Delete a task
  rpc DeleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);

  // Stream task events
  rpc WatchTasks(WatchTasksRequest) returns (stream TaskEvent);
}

// Task message
message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  TaskStatus status = 4;
  Priority priority = 5;
  string assigned_to = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp due_date = 9;
  repeated string tags = 10;
  map<string, string> metadata = 11;
}

// Task status enum
enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_CANCELLED = 4;
}

// Priority enum
enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_CRITICAL = 4;
}

// Request/Response messages
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  Priority priority = 3;
  string assigned_to = 4;
  google.protobuf.Timestamp due_date = 5;
  repeated string tags = 6;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  int32 page_size = 1;
  string page_token = 2;
  TaskStatus status = 3;
  Priority priority = 4;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  TaskStatus status = 4;
  Priority priority = 5;
  string assigned_to = 6;
  google.protobuf.Timestamp due_date = 7;
  repeated string tags = 8;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message WatchTasksRequest {
  repeated string task_ids = 1;
}

message TaskEvent {
  enum EventType {
    EVENT_TYPE_UNSPECIFIED = 0;
    EVENT_TYPE_CREATED = 1;
    EVENT_TYPE_UPDATED = 2;
    EVENT_TYPE_DELETED = 3;
  }

  EventType event_type = 1;
  Task task = 2;
  google.protobuf.Timestamp timestamp = 3;
}
